tests/od2trips/errors/default_false_departspeed/errors.od2trips
Error: Invalid departSpeed definition 'xxx' for option 'departspeed';
 must be one of ("random", "max", or a float>=0)
Quitting (on error).
